chapter13-Securing-cluster-nodes-and-network/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector:
    matchExpressions:
    - key: k
      operator: In
      values: [k]
